--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
   <div class="container">
     <ul class="nav navbar-nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a class="navbar-brand img-responsive hidden-xs" href="index.htm"><img id="pathway-logo" width="280px" src="img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="index.htm"><img id="pathway-mobile-logo" src="img/mobile-logo.png"></a> </li>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
       <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="img/speechbubble.png" width="13" height="11" alt="speech"></a>
         <form class="navbar-right pull-right">
           <button type="submit" class="btn signin-btn"> SIGN IN </button>
