--- a/pages/pathway-faq.html
+++ b/pages/pathway-faq.html
@@ -46,9 +46,7 @@
 		<ul class="nav navbar-nav orange-bar">
 			<li class="header-column visible-xs pull-left">&nbsp;</li>
 			<li class="header-column pull-left">
-				<a class="navbar-brand img-responsive hidden-xs" href="../index.htm"><img id="pathway-logo" width="280" 
-
-					src="../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../index.htm"><img id="pathway-mobile-logo" src="../img/mobile-logo.png"></a>
+				<a id="pathway-logo" class="navbar-brand img-responsive hidden-xs  href="../index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="../index.htm"></a>
 				</li>
 				<li class="header-column pull-right">
 					<a class="header_contact hidden-xs pull-left" href="../pages/advising-and-support.html">Contact Us <img src="../img/speechbubble.png" 
@@ -103,14 +101,14 @@
 
 <div id="main-container" class="container">
   <div class="row row-offcanvas row-offcanvas-right">
-    <div class="col-xs-12 col-sm-8 main-content">
+    <div id="faq-content" class="col-xs-12 col-sm-8 main-content">
       <button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed"> <img id="arrow-icon" src="../img/arrow.png" width="14" height="14" alt="arrow">
       </button>
       <div class="hero pf-page-header"> <img id="faqbubble" src="../img/faq/faqbubble_large.png" alt="quote-bubble">
         <h1 id="Standard" class="page-title">FAQ's</h1>
         <p class="page-summary">Frequently Asked Questions</p>
       </div>
-      <div class="pf-section"> <a id="wip-section"></a>
+      <div class="pf-section">
         <div id="pathway-faq">
          <br>
         <h2 class="subheading">Pathway</h2>
@@ -311,10 +309,10 @@
 <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
   <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
     <ul class="nav green pf-sidenav">
-      <li> <a class="jump_anchor" href="#wip-section"> <span class="caret"></span> Pathway</a> </li>
+      <li> <a class="jump_anchor" href="#"> <span class="caret"></span> Pathway</a> </li>
       <li> <a class="jump_anchor" href="#advising-section"> <span class="caret"></span> Pathway Advising</a> </li>
       <li> <a class="jump_anchor" href="#after-section"> <span class="caret"></span> After Pathway </a> </li>
-      <li> <a class="jump_anchor" href="#sp-section"> <span class="caret"></span> Speaking Partner</a> </li>
+      <li> <a class="jump_anchor" href="#sp-section"> <span class="caret"></span> Speaking Partners</a> </li>
     </ul>
   </div>
 </div>
