--- a/pages/what_is_pathway/s_version/cost_calc_tuition.html
+++ b/pages/what_is_pathway/s_version/cost_calc_tuition.html
@@ -49,9 +49,7 @@
 		<ul class="nav navbar-nav orange-bar">
 			<li class="header-column visible-xs pull-left">&nbsp;</li>
 			<li class="header-column pull-left">
-				<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280px" 
-
-					src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../../index.htm"><img id="pathway-mobile-logo" src="../../../img/mobile-logo.png"></a>
+				<a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="../../../index.htm"></a>
 				</li>
 				<li class="header-column pull-right">
 					<a class="header_contact hidden-xs pull-left" href="../../advising-and-support.html">Contact Us <img src="../../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -79,7 +77,7 @@
 				<nav id="siteNavigation" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="nav-1"><a href="../../testimonials/testimonials.html">Testimonials</a></li>
-						<li class="nav-2  nav-active"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+						<li class="nav-2 nav_active"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
 						<li class="nav-3"><a href="#join">Join Pathway</a></li>
 						<li class="nav-4"><a href="../../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
 						<li class="nav-5"><a href="../../local_leaders/using-pathway.html">Local Leaders</a></li>
@@ -96,7 +94,7 @@
 						<li class="first"><a href="../../../index.htm">Home</a></li>
 						<li><a href="../what_is_pathway.html">What Is Pathway</a></li>
 						<li class="pipe-divider">Standard Version</li>
-						<li class="lowercase">Cost</li>
+						<li class="lowercase"><a href="cost.html">Cost</a></li>
                         <li class="last lowercase">Calculate Tuition</li>
 					</ul>
 				</div>
@@ -130,178 +128,8 @@
 				<p class="info-block">  A measurement used to quantify the load of work for a specific course that enables universities to set a requirement to graduate.</p>
 
 				<p>Pathway standard version courses are either 2 or 3 credits each.</p>
-
-				<!-- <p>In the fall and winter semesters, Age 18-30 groups and Age 18+ groups complete 3 BYU-Idaho online credits at the local tuition rate and 2 institute credits at no charge. In spring semester, these students do not take an institute class, but instead complete 5 BYU-Idaho online credits.</p>
-				<p>Age 31+ groups complete 5 BYU-Idaho online credits in each of the 3 semesters.</p> -->
 				</div>
-				<!-- 
-				<table id="PathwayTuition">
-					<caption>Pathway Tuition in U.S. Dollars</caption>
-					<tr>
-						<th>Country</th>
-						<th>Per Credit</th>
-						<th>Academic Start  <br>(15 credits)</th>
-						<th>Online Certificate <br>(30 credits</th>
-						<th>Online Associate  <br>(60 credits)</th>
-						<th>Online Bachelor <br> (120 credits)</th>
-					</tr>
-					<tr>
-						<td>Albania</td>
-						<td>$25</td>
-						<td>$375</td>
-						<td>$750</td>
-						<td>$1,500</td>
-						<td>$3,000</td>
-					</tr>
-					<tr>
-						<td>Armenia</td>
-						<td>$25</td>
-						<td>$375</td>
-						<td>$750</td>
-						<td>$1,500</td>
-						<td>$3,000</td>
-					</tr>
-					<tr>
-						<td>Brazil</td>
-						<td>$35</td>
-						<td>$525</td>
-						<td>$1,050</td>
-						<td>$2,100</td>
-						<td>$4,200</td>
-					</tr>
-					<tr>
-						<td>Canada</td>
-						<td>$65</td>
-						<td>$975</td>
-						<td>$1,950</td>
-						<td>$3,900</td>
-						<td>$7,800</td>
-					</tr>
-					<tr>
-						<td>chinle,az</td>
-						<td>$35</td>
-						<td>$525</td>
-						<td>$1,050</td>
-						<td>$2,100</td>
-						<td>$4,200</td>
-					</tr>
-					<tr>
-						<td>colombia</td>
-						<td>$30</td>
-						<td>$450</td>
-						<td>$900</td>
-						<td>$1,800</td>
-						<td>$3,600</td>
-					</tr>
-					<tr>
-						<td>ecuador</td>
-						<td>$30</td>
-						<td>$450</td>
-						<td>$900</td>
-						<td>$1,800</td>
-						<td>$3,600</td>
-					</tr>
-					<tr>
-						<td>ghana</td>
-						<td>$20</td>
-						<td>$300</td>
-						<td>$600</td>
-						<td>$1,200</td>
-						<td>$2,400</td>
-					</tr>
-					<tr>
-						<td>guatemala</td>
-						<td>$25</td>
-						<td>$375</td>
-						<td>$750</td>
-						<td>$1,500</td>
-						<td>$3,000</td>
-					</tr>
-					<tr>
-						<td>honduras</td>
-						<td>$20</td>
-						<td>$300</td>
-						<td>$600</td>
-						<td>$1,200</td>
-						<td>$2,400</td>
-					</tr>
-					<tr>
-						<td>mexico</td>
-						<td>$35</td>
-						<td>$525</td>
-						<td>$1,050</td>
-						<td>$2,100</td>
-						<td>$4,200</td>
-					</tr>
-					<tr>
-						<td>new zealand</td>
-						<td>$50</td>
-						<td>$750</td>
-						<td>$1,500</td>
-						<td>$3,000</td>
-						<td>$6,000</td>
-					</tr>
-					<tr>
-						<td>peru</td>
-						<td>$30</td>
-						<td>$450</td>
-						<td>$900</td>
-						<td>$1,800</td>
-						<td>$3,600</td>
-					</tr>
-					<tr>
-						<td>protugal</td>
-						<td>$40 (VAT included)</td>
-						<td>$600</td>
-						<td>$1,200</td>
-						<td>$2,400</td>
-						<td>$4,800</td>
-					</tr>
-					<tr>
-						<td>russia</td>
-						<td>$40</td>
-						<td>$600</td>
-						<td>$1,200</td>
-						<td>$2,400</td>
-						<td>$4,800</td>
-					</tr>
-					<tr>
-						<td>South africa</td>
-						<td>$30</td>
-						<td>$450</td>
-						<td>$900</td>
-						<td>$1,800</td>
-						<td>$3,600</td>
-					</tr>
-					<tr>
-						<td>ukraine</td>
-						<td>$25</td>
-						<td>$375</td>
-						<td>$750</td>
-						<td>$1,500</td>
-						<td>$3,000</td>
-					</tr>
-					<tr>
-						<td rowspan="2">united states</td>
-						<td>$65</td>
-						<td>$975</td>
-						<td>$1,950</td>
-						<td>$3,900</td>
-						<td>$7,800</td>
-					</tr>
-					<tr>
-						<td>$45 (ESL)</td>
-						<td>$675</td>
-						<td>$1,350</td>
-						<td>$2,700</td>
-						<td>$5,400</td>
-					</tr>
-				</table>
-				<p>Tuition Formula:</p>
-				<p class="formula"><span class="part1">Local per credit tuition amount</span> * <span class="part2">number of online credits per semester</span> = <span class="part3">total cost per semester</span></p> -->
-
 			<h3 class="p-heading red">Number of Online Credits per Semester</h3>
-
 			<img class="img-responsive img-space" src="../../../img/calculate-tuition/semesters_blue.png" alt="credits-per-semester" width="100%">
 			<img class="img-responsive img-space" src="../../../img/calculate-tuition/semesters_red.png" alt="credits-per-semester" width="100%">
 			
@@ -386,7 +214,7 @@
 							</li>
 						</ul>
 					</li>
-                    <li class="active">
+                    <li>
 						<a href="course_descriptions.html">
                         <span class="caret down"></span> 
                         Course Descriptions</a>
