--- a/pages/advising-and-support.html
+++ b/pages/advising-and-support.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -40,138 +39,124 @@
     <![endif]-->
 </head>
 
-
-
 <body>
 <!-- START First Top Header -->
-<div class="navbar navbar-inverse signIn pathway-header" role="signIn">
-	<div class="container">
-		<ul class="nav navbar-nav orange-bar">
-			<li class="header-column visible-xs pull-left">&nbsp;</li>
-			<li class="header-column pull-left">
-				<a class="navbar-brand img-responsive hidden-xs" href="../index.htm"><img id="pathway-logo" width="280px" 
-
-					src="../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../index.htm"><img id="pathway-mobile-logo" src="../img/mobile-logo.png"></a>
-				</li>
-				<li class="header-column pull-right">
-					<a class="header_contact hidden-xs pull-left" href="../pages/advising-and-support.html">Contact Us <img src="../img/speechbubble.png" width="13" height="11" alt="speech"></a>
-						<form class="navbar-right pull-right">
-							<button type="submit" class="btn signin-btn">
-								SIGN IN
-							</button>
-						</form>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<!-- END Top Header Start -->
-		<!-- START Navbar -->
-		<div class="navbar navbar-inverse site-navigation" role="navigation">
-			<div id="main_nav" class="container">
-				<div class="navbar-header">
-					<button type="button" class="main_toggle navbar-toggle" data-toggle="collapse" data-target="#siteNavigation">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<nav id="siteNavigation" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav">
-						<li class="nav-1"><a href="testimonials/testimonials.html">Testimonials</a></li>
-						<li class="nav-2"><a href="what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-						<li class="nav-3"><a href="#join">Join Pathway</a></li>
-						<li class="nav-4"><a href="speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
-						<li class="nav-5"><a href="local_leaders/using-pathway.html">Local Leaders</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div> 
-		<!-- END Navbar -->	
-		<!-- Breadcrumb start -->
-		<div class="breadCrumbHolder module hidden-xs">
-			<div class="container">
-				<div id="breadCrumb" class="breadCrumb module">
-					<ul>
-						<li class="first"><a href="../index.htm">Home</a></li>
-						<li class="last">Pathway Support</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-<!-- Breadcrumb end -->
+<div class="navbar navbar-inverse signIn pathway-header">
+  <div class="container">
+    <ul class="nav navbar-nav orange-bar">
+      <li class="header-column visible-xs pull-left">&nbsp;</li>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="../index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="../index.htm"></a> </li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="../pages/advising-and-support.html">Contact Us <img src="../img/speechbubble.png" width="13" height="11" alt="speech"></a>
+        <form class="navbar-right pull-right">
+          <button type="submit" class="btn signin-btn"> SIGN IN </button>
+        </form>
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- END Top Header Start --> 
+<!-- START Navbar -->
+<div class="navbar navbar-inverse site-navigation" role="navigation">
+  <div id="main_nav" class="container">
+    <div class="navbar-header">
+      <button type="button" class="main_toggle navbar-toggle" data-toggle="collapse" data-target="#siteNavigation"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+    </div>
+    <nav id="siteNavigation" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="nav-1"><a href="testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2"><a href="what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-3"><a href="#join">Join Pathway</a></li>
+        <li class="nav-4"><a href="speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
+        <li class="nav-5"><a href="local_leaders/using-pathway.html">Local Leaders</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
+<!-- END Navbar --> 
+<!-- Breadcrumb start -->
+<div class="breadCrumbHolder module hidden-xs">
+  <div class="container">
+    <div id="breadCrumb" class="breadCrumb module">
+      <ul>
+        <li class="first"><a href="../index.htm">Home</a></li>
+        <li class="last">Pathway Support</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<!-- Breadcrumb end --> 
 
 <!-- Start to the content area -->
 
 <div id="main-container" class="container">
-	<div class="row row-offcanvas row-offcanvas-right">
-		<div class="col-xs-12 main-content">
-				<div class="hero pf-page-header">
-				<img style="margin-top:20px" src="../img/advising/symbol_telephone.png" alt="supportLogo"> 
-				<h1 id="Standard" class="page-title">Pathway Support</h1>
-				</div>
-				<div class="pf-section">
-				<h2 class="s-heading">Contact</h2>
-				<p>Email: pathwayadvising@byui.edu
-					<br>
-					<br>
-				Phone: (208) 496-9898 or<br>
-				toll-free at (855) 496-9898
-					<br>
-					<br>
-				Hours: Monday-Friday, 7 a.m.-7 p.m. (Mountain Standard Time)</p>
-				<h2 class="s-heading">About Us</h2>
-				<p>Pathway Support assists current students through their Pathway
-				experience. Our goal is to provide support, tools, and encouragement to
-				help students succeed in Pathway and beyond.</p>
-				</div>
-				<div>
-				<div class="pf-section">
-				<img class="img-responsive" src="../img/advising/advisingteam.png" alt="advisingTeam">
-				</div>
-				<div class="pf-section">
-				<h2 class="s-heading">Our Services</h2>	
-				<h3 class="s-heading2">APPLICATION AND REGISTRATION QUESTIONS</h2>
-					<p style="font-style: italic;">If you have questions about the Pathway application or registration
-				processes, we have the answers.</p>
-				<h3 class="s-heading2">EXPLORE ACADEMIC OPPORTUNITIES</h2>
-					<p style="font-style: italic;">We help students explore the many different educational opportunities that
-				are available during and after Pathway.</p>
-				<h3 class="s-heading2">WEBSITE NAVIGATION</h2>
-					<p style="font-style: italic;">Can’t find what you’re looking for on the Pathway website? Contact
-				Pathway Support, and we’ll point you in the right direction.</p>
-				<h3 class="s-heading2">PREPARE FOR MATRICULATION</h2>
-					<p style="font-style: italic;">Whether you decide to continue your degree at BYU-Idaho or at a local
-				school, we are here to help you in the next step.</p>
-				<h3 class="s-heading2">MOTIVATION / ENCOURAGEMENT</h2>
-					<p style="font-style: italic;">Feeling overwhelmed? Pathway Support representatives are only a call or
-				email away with words of advice, motivation, and encouragement.</p>
-				<h3 class="s-heading2">ANSWERS TO ADDITIONAL QUESTIONS</h2>
-					<p style="font-style: italic;">Contact us for any other questions you may have.</p>
-
-				<h2 class="s-heading2">After Pathway</h2>
-				<p>Your Pathway experience is only the first step of your academic journey.
-				We encourage you to continue your education and matriculate (start toward
-				your degree) at BYU-Idaho or any other institute of higher learning.</p>
-				<br>
-				<ul>
-					<li>Matriculation information for those in their second semester of
-					<br>Pathway: <a href="../pdfs/advising_and_support/Advise_Matriculation_Template_Update_Semester2.pdf" style="color:#dc4831;" target="_blank">2nd Semester Matriculation PDF</a></li>
-					<li>Matriculation information for those in their final semester of<br>
-					Pathway: <a href="../pdfs/advising_and_support/Advise_Matriculation_Template_Update_Semester3.pdf" style="color:#dc4831;" target="_blank">3rd Semester Matriculation PDF</a></li>
-					<li>Find Out More: <a href="pathway-faq.html#after-section" style="color:#dc4831;">Matriculation FAQs</li>
-				</ul>
-				<br>
-				
-				</div>
-
-
-
-
-		</div>
-			
-
-	</div>
+  <div class="row row-offcanvas row-offcanvas-right">
+    <div class="col-xs-12 main-content">
+      <div class="hero pf-page-header"> <img style="margin-top:20px" src="../img/advising/symbol_telephone.png" alt="supportLogo">
+        <h1 id="Standard" class="page-title">Pathway Support</h1>
+      </div>
+      <div class="pf-section">
+        <h2 class="s-heading">Contact</h2>
+        <p>Email: pathwayadvising@byui.edu <br>
+          <br>
+          Phone: (208) 496-9898 or<br>
+          toll-free at (855) 496-9898 <br>
+          <br>
+          Hours: Monday-Friday, 7 a.m.-7 p.m. (Mountain Standard Time)</p>
+        <h2 class="s-heading">About Us</h2>
+        <p>Pathway Support assists current students through their Pathway
+          experience. Our goal is to provide support, tools, and encouragement to
+          help students succeed in Pathway and beyond.</p>
+      </div>
+      <div>
+        <div class="pf-section"> <img class="img-responsive" src="../img/advising/advisingteam.png" alt="advisingTeam"> </div>
+        <div class="pf-section">
+          <h2 class="s-heading">Our Services</h2>
+          <h3 class="s-heading2">
+          APPLICATION AND REGISTRATION QUESTIONS
+          </h3>
+          <p style="font-style: italic;">If you have questions about the Pathway application or registration
+            processes, we have the answers.</p>
+          <h3 class="s-heading2">
+          EXPLORE ACADEMIC OPPORTUNITIES
+          </h3>
+          <p style="font-style: italic;">We help students explore the many different educational opportunities that
+            are available during and after Pathway.</p>
+          <h3 class="s-heading2">
+          WEBSITE NAVIGATION
+          </h3>
+          <p style="font-style: italic;">Can’t find what you’re looking for on the Pathway website? Contact
+            Pathway Support, and we’ll point you in the right direction.</p>
+          <h3 class="s-heading2">
+          PREPARE FOR MATRICULATION
+          </h3>
+          <p style="font-style: italic;">Whether you decide to continue your degree at BYU-Idaho or at a local
+            school, we are here to help you in the next step.</p>
+          <h3 class="s-heading2">
+          MOTIVATION / ENCOURAGEMENT
+          </h3>
+          <p style="font-style: italic;">Feeling overwhelmed? Pathway Support representatives are only a call or
+            email away with words of advice, motivation, and encouragement.</p>
+          <h3 class="s-heading2">
+          ANSWERS TO ADDITIONAL QUESTIONS
+          </h3>
+          <p style="font-style: italic;">Contact us for any other questions you may have.</p>
+          <h2 class="s-heading2">After Pathway</h2>
+          <p>Your Pathway experience is only the first step of your academic journey.
+            We encourage you to continue your education and matriculate (start toward
+            your degree) at BYU-Idaho or any other institute of higher learning.</p>
+          <br>
+          <ul>
+            <li>Matriculation information for those in their second semester of <br>
+              Pathway: <a href="../pdfs/advising_and_support/Advise_Matriculation_Template_Update_Semester2.pdf" style="color:#dc4831;" target="_blank">2nd Semester Matriculation PDF</a></li>
+            <li>Matriculation information for those in their final semester of<br>
+              Pathway: <a href="../pdfs/advising_and_support/Advise_Matriculation_Template_Update_Semester3.pdf" style="color:#dc4831;" target="_blank">3rd Semester Matriculation PDF</a></li>
+            <li>Find Out More: <a href="pathway-faq.html#after-section" style="color:#dc4831;">Matriculation FAQs</a></li>
+          </ul>
+          <br>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <footer>
   <div class="container">
@@ -190,16 +175,15 @@
       <img class="byui-logo" src="../img/byui_logo.png" width="78" height="45"> </div>
   </div>
 </footer>
-
 <!-- /container --> 
 
 <!-- Bootstrap core JavaScript
     ================================================== --> 
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="../../../dist/js/bootstrap.min.js"></script> 
-<script src="../../../js/jquery.easing.1.3.js" type="text/javascript" >
-</script>
-<script src="../../../js/drawer.js"></script>
+<script src="../dist/js/bootstrap.min.js"></script> 
+<script src="../js/jquery.easing.1.3.js" type="text/javascript" >
+</script> 
+<script src="../js/drawer.js"></script>
 </body>
 </html>
