--- a/pages/what_is_pathway/l_version/cost_calc_tuition.html
+++ b/pages/what_is_pathway/l_version/cost_calc_tuition.html
@@ -49,9 +49,7 @@
 		<ul class="nav navbar-nav orange-bar">
 			<li class="header-column visible-xs pull-left">&nbsp;</li>
 			<li class="header-column pull-left">
-				<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280px" 
-
-					src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../../index.htm"><img id="pathway-mobile-logo" src="../../../img/mobile-logo.png"></a>
+				<a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="../../../index.htm"></a>
 				</li>
 				<li class="header-column pull-right">
 					<a class="header_contact hidden-xs pull-left" href="../../advising-and-support.html">Contact Us <img src="../../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
@@ -96,7 +94,7 @@
 						<li class="first"><a href="../../../index.htm">Home</a></li>
 						<li><a href="../what_is_pathway.html">What Is Pathway</a></li>
 						<li class="pipe-divider">L Version</li>
-                        <li class="lowercase">Cost</li>
+                        <li class="lowercase"><a href="cost.html">Cost</a></li>
 						<li class="last lowecase">Calculate Tuition</li>
 					</ul>
 				</div>
