--- a/index.htm
+++ b/index.htm
@@ -155,7 +155,7 @@
         <li> <a href="pages/pathway-faq.html">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
-      <img class="byui-box-logo" src="img/byui_logo.png" width="78"> </div>
+      <a href="http://www.byui.edu" class="byui-box-logo"></a> </div>
   </div>
 </div>
 </div>
@@ -169,7 +169,7 @@
         <li class="hidden-xs"> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
-      <img class="byui-logo hidden-xs" src="img/byui_logo.png" width="78" height="45"> </div>
+      <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
   </div>
 </footer>
 
