--- a/pages/pathway-faq.html
+++ b/pages/pathway-faq.html
@@ -334,7 +334,7 @@
         <li> <a href="pathway-faq.html"><img class="faq-bubble" src="../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
-      <img class="byui-logo" src="../img/byui_logo.png" width="78" height="45"> </div>
+     <a href="http://www.byui.edu" class="byui-logo"></a></div>
   </div>
 </footer>
 
