--- a/pages/pathway-faq.html
+++ b/pages/pathway-faq.html
@@ -46,7 +46,7 @@
 		<ul class="nav navbar-nav orange-bar">
 			<li class="header-column visible-xs pull-left">&nbsp;</li>
 			<li class="header-column pull-left">
-				<a id="pathway-logo" class="navbar-brand img-responsive hidden-xs  href="../index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="../index.htm"></a>
+				<a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="../index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="../index.htm"></a>
 				</li>
 				<li class="header-column pull-right">
 					<a class="header_contact hidden-xs pull-left" href="../pages/advising-and-support.html">Contact Us <img src="../img/speechbubble.png" 
@@ -308,11 +308,11 @@
 <!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
   <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
-    <ul class="nav green pf-sidenav">
-      <li> <a class="jump_anchor" href="#"> <span class="caret"></span> Pathway</a> </li>
-      <li> <a class="jump_anchor" href="#advising-section"> <span class="caret"></span> Pathway Advising</a> </li>
-      <li> <a class="jump_anchor" href="#after-section"> <span class="caret"></span> After Pathway </a> </li>
-      <li> <a class="jump_anchor" href="#sp-section"> <span class="caret"></span> Speaking Partners</a> </li>
+    <ul class="nav black pf-sidenav">
+      <li id="to_pathway"> <a class="jump_anchor" href="#"> <span class="caret"></span> Pathway</a> </li>
+      <li id="to_advising"> <a class="jump_anchor" href="#advising-section"> <span class="caret"></span> Pathway Advising</a> </li>
+      <li id="to_after"> <a class="jump_anchor" href="#after-section"> <span class="caret"></span> After Pathway </a> </li>
+      <li id="to_sp"> <a class="jump_anchor" href="#sp-section"> <span class="caret"></span> Speaking Partners</a> </li>
     </ul>
   </div>
 </div>
@@ -332,7 +332,7 @@
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="about-us.html">About Us</a> </li>
         <li> <a href="pathway-faq.html"><img class="faq-bubble" src="../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
-        <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
+        <li> <a href="../media/media.html">Media</a> </li>
       </ul>
      <a href="http://www.byui.edu" class="byui-logo"></a></div>
   </div>
