--- a/pages/what_is_pathway/l_version/cost_calc_tuition.html
+++ b/pages/what_is_pathway/l_version/cost_calc_tuition.html
@@ -407,7 +407,7 @@
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="../../about-us.html">About Us</a> </li>
         <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
-        <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
+        <li> <a href="../../media/media.html">Media</a> </li>
       </ul>
       <a href="http://www.byui.edu" class="byui-logo"></a> </div>
   </div>
