--- a/pages/what_is_pathway/what_is_pathway.html
+++ b/pages/what_is_pathway/what_is_pathway.html
@@ -129,7 +129,7 @@
 				</div>
 
 				<div class="caption-block red">
-				<p>Visit our <a href="http://www.byui.edu/pathway/videos" target="_blank">Media Page</a> or use the social media links below to watch more Pathway videos.</p>
+				<p>Visit our <a href="../../media/media.html" target="_blank">Media Page</a> or use the social media links below to watch more Pathway videos.</p>
 				</div>
 
 					
@@ -164,7 +164,7 @@
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="../about-us.html">About Us</a> </li>
         <li> <a href="../pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
-        <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
+        <li> <a href="../media/media.html">Media</a> </li>
       </ul>
       <a href="http://www.byui.edu" class="byui-logo"></a> </div>
   </div>
