--- a/pages/local_leaders/roles-responsibilities.html
+++ b/pages/local_leaders/roles-responsibilities.html
@@ -152,7 +152,7 @@
    					</ul>
    				</div>
    				<div class="pf-section no-icon">
-   					<a id="roleofpathwaymissionaries"><h3 class="p-heading blue">Role of Pathway Missionaries</h3></a>
+   					<a id="roleofpathwaymissionaries"></a><h3 class="p-heading blue">Role of Pathway Missionaries</h3>
    					<p>BYU-Idaho relies heavily on Church service missionaries to assist with the on-site management of Pathway. While priesthood leaders and institute directors support the program, the missionaries do the bulk of the work to ensure Pathway is successful and that students have a meaningful experience. Missionaries are primarily asked to:</p>
    					<ul>
    						<li>Promote Pathway by personally engaging priesthood and auxiliary leaders in each stake and ward</li>
