--- a/pages/media/media.html
+++ b/pages/media/media.html
@@ -114,12 +114,12 @@
    					<h1 id="Standard" class="page-title">Media</h1>
                     <p class="page-summary">Pathway students, priesthood leaders, and others share their feelings about the BYU-Idaho Pathway program.</p>
    				</div>
-   				<div class="pf-section no-icon">
-   					<div class="category-list">
+   				<div class="pf-section no-icon"> <img class="img-responsive" src="../../img/media/media-coming-soon.png" width="602" height="470" alt="coming-soon">
+   					<!--<div class="category-list">
                     <a href="#"><div class="catg-icon"><img src="../../img/media/videos-icon.png" width="85" height="82" alt="video-icon"></div><span class="caption">Videos</span></a>
                     <a href="#"><div class="catg-icon"><img src="../../img/media/photos-icon.png" width="86" height="66" alt="photos-icon"></div><span class="caption">Photos</span></a>
                     <a href="#"><div class="catg-icon"><img src="../../img/media/marketing-materials-icon.png" width="67" height="81" alt="marketing-icon"></div><span class="caption">Marketing Materials</span></a>
-                    </div>
+                    </div>-->
    				</div>
    				
    					
