--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -138,7 +138,7 @@
         <h4 class="p-heading2 red">Academic Courses</h4>
         <p>All groups complete their Pathway academic courses online and gather weekly at a local institute facility or church meetinghouse to discuss the lesson material, collaborate on assignments, and teach one another. </p>
         <h4 class="p-heading2 red">Religion Courses</h4>
-        <p>Students in the Age 18-30 and Age 18+ groups complete their Book of Mormon courses through their local institute program at no charge, and the credits are then eligible for transfer to BYU-Idaho as elective credits.</p>
+        <p>Students in the Age 18-30 and Age 18+ groups complete their Book of Mormon courses through their local institute program at no charge, and the credits are then eligible for transfer to BYU-Idaho.</p>
         <p>Students in the Age 31+ group complete their Book of Mormon courses online through BYU-Idaho.</p>
         <p>All groups complete the FDREL 333, “Teachings of the Living Prophets,” course online through BYU-Idaho.</p>
         
