--- a/index.htm
+++ b/index.htm
@@ -153,7 +153,7 @@
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="pages/about-us.html">About Us</a> </li>
         <li> <a href="pages/pathway-faq.html">FAQ</a> </li>
-        <li> <a href="../media/media.html">Media</a> </li>
+        <li> <a href="pages/media/media.html">Media</a> </li>
       </ul>
       <a href="http://www.byui.edu" class="byui-box-logo"></a> </div>
   </div>
@@ -167,7 +167,7 @@
         <li class="hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li class="hidden-xs"> <a href="pages/about-us.html">About Us</a> </li>
         <li class="hidden-xs"> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
-        <li class="hidden-xs"> <a href="../media/media.html">Media</a> </li>
+        <li class="hidden-xs"> <a href="pages/media/media.html">Media</a> </li>
       </ul>
       <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
   </div>
