--- a/pages/testimonials/testimonials.html
+++ b/pages/testimonials/testimonials.html
@@ -130,32 +130,14 @@
     </div>
     </div>
    </div>
-<div class="col-xs-12 visible-xs testimonial-quote-block">
+    <div class="col-xs-12 visible-xs testimonial-quote-block">
     	<img src="../../img/testimonials/mobile-speech.png" width="100%">
     </div>
-   <div class="container testimonial-quote-block hidden-xs">
-    
-    <div class="col-sm-4">
-         <img class="quote-bubble img-responsive" src="../../img/testimonials/bubble_1.png" alt="quote bubble" width="100%">
-      <p class="quote">Pathway…has really brought light to my life. It’s helped me out with so much stuff I never thought I’d achieve. I never had plans on going to college. Ever. Not even for a second in my life. And now I feel like I can achieve that because of Pathway. If it wasn’t for this program, I don’t think I could do it.</p>
-            <div class="quote-credit one">
-      <p style="font-weight:bold">Joe Hedrick,<br><span style="font-weight:normal;font-style:italic;">Riverside, California Pathway Student</span></p>
-      </div>
+    <div class="container testimonial-quote-block hidden-xs visible-sm">
+      <img src="../../img/testimonials/testimonial-bubbles_large-screen.png" width="100%">
     </div>
-    <div class="col-sm-4">
-      <img class="quote-bubble img-responsive" src="../../img/testimonials/bubble_2.png" alt="quote bubble" width="100%">
-      <p class="quote">I love Pathway because it has given me the opportunity to learn from my classmates, and it has given me the opportunity to increase my skills in every aspect of my life.</p>
-      <div class="quote-credit two">
-      <p style="font-weight:bold">Saul Castillo,<br><span style="font-weight:normal;font-style:italic;">Puebla, Mexico <br>Pathway Student</span></p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <img class="quote-bubble img-responsive" src="../../img/testimonials/bubble_3.png" alt="quote bubble" width="100%">
-      <p class="quote">I just love Pathway. I think it was…almost like the Lord had created it for me. It was custom-tailored to what I needed. And I have been blessed. My testimony of the gospel through the study of the Book of Mormon, through the study of The
-      Living Prophets, has grown so much.…I have a great love for Pathway.</p>
-      <div class="quote-credit three">
-      <p style="font-weight:bold">John Zeller,<br><span style="font-weight:normal;font-style:italic;">Boston, Massachusetts <br>Pathway Student</span></p>
-      </div>
+    <div class="container testimonial-quote-block hidden-sm hidden-xs">
+      <img src="../../img/testimonials/testimonial-bubbles_regular-screen.png" width="100%">
     </div>
     
 
