--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
 <!-- Split button -->
 <div class="btn-group">
  
-        <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome">Gordon</a>
+        <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Gordon</span><img class="visible-xs" src="img/usernameman.png" style="padding:0 10px; height:20px;"></a>
  
  
         <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
