--- a/pages/media/media.html
+++ b/pages/media/media.html
@@ -129,9 +129,32 @@
         <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-rwight" id="sidebar" role="navigation">
       <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
         <ul class="nav pf-sidenav">
-          <li> <a href="#"> <span class="caret"></span> Videos</a> </li>
-          <li> <a href="#"> <span class="caret"></span>Photos</a> </li>
-          <li> <a href="#"> <span class="caret"></span>Marketing Materials</a>
+          <li class="active"> 
+            <a href="#"> <span class="caret"></span> Videos</a>
+            <ul class="nav drop-down">
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+            </ul>
+          </li>
+          <li class="active"> 
+            <a href="#"> <span class="caret"></span>Photos</a>
+            <ul class="nav drop-down">
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+            </ul>
+          </li>
+          <li class="active"> 
+            <a href="#"> <span class="caret"></span>Marketing Materials</a>
+            <ul class="nav drop-down">
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+              <li> <a href="#item">Sub Item</a> </li>
+            </ul>
           </li>
         </ul>
       </div>
