--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -115,10 +115,10 @@
             <p> For years, Church and school leaders have recognized the need for
               educational opportunities to extend beyond the city limits of Rexburg
               and into the far reaches of the Earth. </p>
-            <p> In 1971, Henry B. Eyring, then president of Ricks College, declared
-              the following in his inaugural address: </p>
           </div>
-          <div class="col-xs-12 col-sm-4"> <img src="../img/about-us/pathwayclassroom.png" alt="students in a pathway class"> </div>
+          <div class="col-xs-12 col-sm-4"> <img src="../img/about-us/pathwayclassroom.png" alt="students in a pathway class"><br><br></div>
+          <p> In 1971, Henry B. Eyring, then president of Ricks College, declared
+              the following in his inaugural address: </p>
         </div>
       <div class="content-block underline">
         <div class="col-xs-12 col-sm-8">
