--- a/pages/local_leaders/using-pathway.html
+++ b/pages/local_leaders/using-pathway.html
@@ -185,14 +185,11 @@
               inaugural address as president of then Ricks College:
             </p>
             
-          </div>    
-
-          <!--  <blockquote class="quote"> -->
-
+          </div>
+          <div class="row">
           <div class="quote-block">
-            <img alt="elder-eyring" style="width:35%; float:left; display:inline;" class="img-responsive" src="../../img/local-leaders/eyring_small.png">
-
-            <p class="local-quote">               
+            <img alt="elder-eyring" class="hidden-xs hidden-sm col-xs-6 col-sm-4" src="../../img/local-leaders/eyring_small.png">
+            <p class="col-xs-12 col-md-7 local-quote">               
               “We must also find ways for this college to
               serve young people whose needs are
               shaped by a great variety of cultures and
@@ -202,17 +199,14 @@
               ... from this campus out into the lives of
               men and women everywhere."
             </p>
-
+            <img alt="elder-bednar" style="margin-bottom:50px" class="visible-xs visible-sm col-xs-3" src="../../img/local-leaders/eyring_small.png">
+            <div class="col-xs-6 col-sm-6 col-md-12 credit">President Henry B. Eyring, Inaugural Response, December 1971</div>
           </div>
-          <div class="credit">President Henry B. Eyring, Inaugural Response, December 1971</div>
-          <!--   </blockquote> -->
-
-
-
+          </div>
+          <div class="row">
           <div class="quote-block">
-            <img alt="elder-bednar" style="width:35%; float:left; display:inline;" class="img-responsive" src="../../img/local-leaders/bednar_small.png">
-
-            <p class="local-quote">
+            <img alt="elder-bednar" class="hidden-xs hidden-sm col-xs-6 col-sm-4" src="../../img/local-leaders/bednar_small.png">
+            <p class="col-xs-12 col-md-7 local-quote">
               "It will be necessary for us ... to serve ever
               better the thousands of students we have
               on campus while simultaneously reaching
@@ -223,9 +217,10 @@
               Rhode Island and Rome while effectively
               serving our students on campus in Rexburg."
             </p>
-          </div>    
-          <div class="credit">President David A. Bednar, Inaugural Response, February 1998</div>
-          <!-- </blockquote> -->
+            <img alt="elder-bednar" style="margin-bottom:50px" class="visible-xs visible-sm col-xs-3" src="../../img/local-leaders/bednar_small.png">
+            <div class="col-xs-6 col-sm-6 col-md-12 credit">President David A. Bednar, Inaugural Response, February 1998</div>
+          </div>
+          </div>
 
           <div class="pf-section no-icon">
             <p class="main-content">Both of these men echoed a similar sentiment: BYU-Idaho must find
