--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -133,7 +133,7 @@
       </div>
 
         <div class="caption-block green">
-        <p>To watch more videos or learn more about Pathway, visit our <br><a href="../media/media.html" target="_blank">Media Page,</a> or click on one of the social media links at the bottom of the page.</p>
+        <p>To watch more videos or learn more about Pathway, visit our <br><a href="http://www.byui.edu/pathway/videos" target="_blank">Media Page,</a> or click on one of the social media links at the bottom of the page.</p>
         </div>
 
         <div class="main-content">
@@ -183,7 +183,7 @@
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="../about-us.html">About Us</a> </li>
         <li> <a href="../pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
-        <li> <a href="../media/media.html">Media</a> </li>
+        <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <a href="http://www.byui.edu" class="byui-logo"></a> </div>
   </div>
