--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -200,7 +199,7 @@
         <li class="hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li class="hidden-xs"> <a href="pages/about-us.html">About Us</a> </li>
         <li class="hidden-xs"> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
-        <li class="hidden-xs"> <a href="pages/media/media.html">Media</a> </li>
+        <li class="hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
       <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
   </div>
