--- a/pages/what_is_pathway/l_version/service_missionaries.html
+++ b/pages/what_is_pathway/l_version/service_missionaries.html
@@ -112,7 +112,7 @@
 			<div class="hero pf-page-header">
 				<img src="../../../img/wip/icons/lversion.png" alt="L-VersionLogo"> 
 				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who have low to intermediate English proficiency</p></div>
+				<p class="page-summary">For students who have intermediate-low English proficiency</p></div>
 			<div class="pf-section" "main-content">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/missionaries.png" width="46" height="55" alt="missionaries">
