--- a/pages/what_is_pathway/s_version/cost.html
+++ b/pages/what_is_pathway/s_version/cost.html
@@ -136,7 +136,7 @@
 				<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on-campus tuition.</p>
 				
 				<h3 id="FinancialAid" class="p-heading red">Financial Aid</h3>
-				<p>Financial aid is not available for Pathway students during their first year. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
+				<p>Financial aid is not available for Pathway students. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
 			</div>
 		</div>
 
