--- a/pages/what_is_pathway/s_version/course_descriptions.html
+++ b/pages/what_is_pathway/s_version/course_descriptions.html
@@ -100,7 +100,7 @@
       </div>
       <div class="pf-section no-icon">
         <h4 class="c-heading red">Academic Courses</h4>
-        <h5 class="c-heading2 red">GS 120 PATHWAY LIFE SKILLS</h5>
+        <h5 class="c-heading2 red">GS 120 LIFE SKILLS</h5>
         <h6 class="c-heading3 red">3 CREDITS</h6>
        
         <p>GS 120 teaches basic life skills that can lead to success in both
@@ -119,7 +119,7 @@
           rhetorical modes and purposes; audience analysis; the composing
           process; and editing.</p>
         <br>
-        <h5 class="c-heading2 red">MATH 100G PERSONAL FINANCE</h5>
+        <h5 class="c-heading2 red">MATH 100G INTRO TO ALGEBRA AND FINANCE</h5>
         <h6 class="c-heading3 red">3 CREDITS</h6>
      
         <p>MATH 100G is designed to help students recap, learn, and retain the
