--- a/pages/what_is_pathway/what_is_pathway.html
+++ b/pages/what_is_pathway/what_is_pathway.html
@@ -116,7 +116,7 @@
             <p><a href="s_version/HPW.html"><img src="../../img/wip/icons/button_standard.png"></a><br>
 <span class="caption">For students who are proficient in English.</span></p>
             <p><a href="l_version/HPW.html"><img src="../../img/wip/icons/button_lversion.png"></a><br>
-<span class="caption">For students who a have low to intermediate English proficiency.</span></p>
+<span class="caption">For students who have intermediate-low English proficiency.</span></p>
 			</div>	
 
 				<div id="video-info-block">
@@ -145,7 +145,8 @@
 					</li>
 					<li>
 						<a class="no-highlight" href="l_version/HPW.html"><img src="../../img/wip/icons/button_lversion.png"></a>
-						<p>For students who <strong> have low to intermediate English proficiency</strong>, the L version includes academic courses that incorporate English-language instruction as a main component of the coursework. Students meet weekly with a native English speaker throughout the program to improve their English skills. All parts of the program are facilitated entirely in English.</p>
+						<p>For students who <strong>have intermediate-low* English proficiency</strong>, the L&nbsp;version includes academic courses that incorporate English-language instruction as a main component of the coursework. Students meet weekly with a native English speaker throughout the program to improve their English skills. All parts of the program are facilitated entirely in English.</p>
+						<p style="font-style:italic;">*The intermediate-low language learner understands and communicates at the sentence level. An English proficiency assessment may be required to determine a student’s eligibility for Pathway.</p>
 					</li>
 				</ul>
 			</div>
