--- a/pages/what_is_pathway/l_version/HPW.html
+++ b/pages/what_is_pathway/l_version/HPW.html
@@ -111,7 +111,7 @@
 			<div class="hero pf-page-header">
 				<img src="../../../img/wip/icons/lversion.png" alt="L-VersionLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who have low to intermediate English proficiency</p></div>
+				<p class="page-summary">For students who have intermediate-low English proficiency</p></div>
 			<div class="pf-section">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/gear.png" width="45" height="46" alt="gear">
