--- a/pages/what_is_pathway/l_version/cost.html
+++ b/pages/what_is_pathway/l_version/cost.html
@@ -111,7 +111,7 @@
 				<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
 				
-					<p class="page-summary">For students who have low to intermediate English proficiency</p></div>
+					<p class="page-summary">For students who have intermediate-low English proficiency</p></div>
 			<div class="pf-section">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/piggy.png" alt="piggy">
@@ -133,7 +133,7 @@
 				<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on-campus tuition.</p>
 				
 				<h3 id="FinancialAid" class="p-heading turquoise">Financial Aid</h3>
-				<p>Financial aid is not available for Pathway students during their first year. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
+				<p>Financial aid is not available for Pathway students. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
 			</div>
 		</div>
 
