--- a/pages/pathway-faq.html
+++ b/pages/pathway-faq.html
@@ -152,6 +152,9 @@
         <p class="collapsible" id="is_financial_aid">Pathway students do not qualify for U.S. federal financial aid or BYU-Idaho scholarships because Pathway is a pre-matriculation program. Students are encouraged to search for private scholarships and/or learn more about the Perpetual Education fund (PEF) as possible options to gain financial assistance. <br><br>
 U.S. students who have a high school diploma may qualify for federal financial aid once they complete Pathway and become a degree-seeking student. International online students do not qualify for U.S. federal financial aid during Pathway or in the Online Degree Program. For more information, including a full list of eligibility requirements, contact the BYU-Idaho <a href="http://www.byui.edu/financial-aid" target="_blank">Financial Aid</a> office.
  </p>
+        <h3 class="p-heading red"><a onClick="expand('is_disability')"  >Are disability accommodations available to Pathway students?</a></h3>
+        <p class="collapsible" id="is_disability">In compliance with applicable disability law, qualified students with a disability may be entitled to "reasonable accommodation."  It is the student's responsibility to disclose to the teacher any special need she/he may have as soon as possible as accommodations are not retroactive.
+        </p>
         <h3 class="p-heading red"><a onClick="expand('who_are_the')"  >Who are the missionaries at my Pathway site?</a></h3>
         <p class="collapsible" id="who_are_the">You can find Pathway sites and missionary contact information on the Pathway website. Click on the “Find a Location and Apply” link in the middle of the page; then search for the Pathway location in which you’re interested. The missionaries’ contact information is listed on each site’s page.</p>
         <h3 class="p-heading red"><a onClick="expand('how_to_pay')"  >How do I pay for courses?</a></h3>
